# ml-capstone

./: .gitignore  2.ipynb  3.ipynb  CLAUDE.md  README.md  bbo_capstone_reflection.docx  generate_reflection.py  inputs2.txt  outputs2.txt  pyproject.toml  question.md
data/submissions/round_01/: inputs.txt  outputs.txt
data/submissions/round_02/: inputs.txt  outputs.txt
data/submissions/round_03/: inputs.txt  outputs.txt
data/submissions/round_04/: inputs.txt  outputs.txt
data/submissions/round_05/: inputs.txt  outputs.txt
data/submissions/round_06/: inputs.txt  outputs.txt
data/submissions/round_07/: inputs.txt  outputs.txt
data/submissions/round_08/: inputs.txt  outputs.txt
data/submissions/round_09/: inputs.txt  outputs.txt
data/submissions/round_10/: inputs.txt  outputs.txt
data/submissions/round_11/: inputs.txt  outputs.txt
data/submissions/round_12/: inputs.txt  outputs.txt
data/submissions/round_13/: inputs.txt  outputs.txt
docs/: datasheet.md  model_card.md  part2_reflection.md  reflections.md
notebooks/: 01_exploration.ipynb  03_optimization.ipynb  04_visualisations.ipynb
results/: analysis.md  tracking.md
src/: bo_utils.py  propose_round.py
