[project]
name = "capstone1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
